==> bffr05/SoftRF.Split/software/firmware/source/SoftRF/src/platform/PSoC4.cpp <==
#include <SPI.h>
#include <Wire.h>
#include "../system/SoC.h"
#include "../driver/RF.h"
#include "../driver/EEPROM.h"
#include "../driver/LED.h"
#include "../driver/OLED.h"
#include "../driver/Baro.h"
#include "../driver/Sound.h"
#include "../driver/Battery.h"
#include "../protocol/data/NMEA.h"
#include "../protocol/data/GDL90.h"
#include "../protocol/data/D1090.h"
#include <innerWdt.h>
#include <lorawan_port.h>

static void PSoC4_setup()
{
  uint32 reset_reason = CySysGetResetReason(0);

  switch (reset_reason)
  {
    case CY_SYS_RESET_WDT:
      reset_info.reason = REASON_WDT_RST; break;
    case CY_SYS_RESET_PROTFAULT:
      reset_info.reason = REASON_EXCEPTION_RST; break;

    case CY_SYS_RESET_SW:
    default:
      reset_info.reason = REASON_DEFAULT_RST; break;
  }

#if defined(USE_OLED)
#if SOC_GPIO_PIN_OLED_PWR != SOC_UNUSED_PIN
  pinMode(SOC_GPIO_PIN_OLED_PWR, OUTPUT);
  digitalWrite(SOC_GPIO_PIN_OLED_PWR, LOW);
#endif /* SOC_GPIO_PIN_OLED_PWR */

#if SOC_GPIO_PIN_OLED_RST != SOC_UNUSED_PIN
  pinMode(SOC_GPIO_PIN_OLED_RST, OUTPUT);
  digitalWrite(SOC_GPIO_PIN_OLED_RST, HIGH);
#endif /* SOC_GPIO_PIN_OLED_RST */
#endif /* USE_OLED */

  delay(200);

  /* This test needs a proper pull-up resistors on the I2C bus */
#if defined(CubeCell_GPS)
  /* SSD1306 I2C OLED probing */
  Wire.begin();
  Wire.beginTransmission(SSD1306_OLED_I2C_ADDR);
  if (Wire.endTransmission() == 0) {
    hw_info.model = SOFTRF_MODEL_MINI;
  }
#endif /* CubeCell_GPS */

#if defined(USE_OLED)
#if SOC_GPIO_PIN_OLED_RST != SOC_UNUSED_PIN
  pinMode(SOC_GPIO_PIN_OLED_RST, ANALOG);
#endif /* SOC_GPIO_PIN_OLED_RST */

#if SOC_GPIO_PIN_OLED_PWR != SOC_UNUSED_PIN
  pinMode(SOC_GPIO_PIN_OLED_PWR, ANALOG);
#endif /* SOC_GPIO_PIN_OLED_PWR */
#endif /* USE_OLED */

  if (hw_info.model == SOFTRF_MODEL_MINI) {
    PSoC4_board = PSOC4_HELTEC_CUBECELL_GPS_V1_0;

#if defined(USE_OLED)
#if SOC_GPIO_PIN_OLED_PWR != SOC_UNUSED_PIN
    pinMode(SOC_GPIO_PIN_OLED_PWR, OUTPUT);
    digitalWrite(SOC_GPIO_PIN_OLED_PWR, LOW);
#endif /* SOC_GPIO_PIN_OLED_PWR */

#if SOC_GPIO_PIN_OLED_RST != SOC_UNUSED_PIN
    pinMode(SOC_GPIO_PIN_OLED_RST, OUTPUT);
    digitalWrite(SOC_GPIO_PIN_OLED_RST, HIGH);
#endif /* SOC_GPIO_PIN_OLED_RST */
#endif /* USE_OLED */

    pinMode(SOC_GPIO_PIN_GNSS_PWR, OUTPUT);
    digitalWrite(SOC_GPIO_PIN_GNSS_PWR, LOW);
  } else {
    PSoC4_board = (SoC->getChipId() == 0x9b531416) ? PSOC4_AITHINKER_RA_07H : PSOC4_EBYTE_E78;

    pinMode(SOC_GPIO_PIN_ANT_RXTX, OUTPUT);
    digitalWrite(SOC_GPIO_PIN_ANT_RXTX, HIGH);

    lmic_pins.tcxo = (PSoC4_board == PSOC4_AITHINKER_RA_07H) ? lmic_pins.rst : lmic_pins.tcxo;
  }

  Serial.begin(SERIAL_OUT_BR, SERIAL_OUT_BITS);
}

static void PSoC4_loop()
{
  if (PSoC4_state == PSOC4_LOW_POWER) {
    lowPowerHandler();
  }
}

static void PSoC4_reset()
{
  CySoftwareReset();
}

static uint32_t PSoC4_getChipId()
{
#if !defined(SOFTRF_ADDRESS)
  uint32_t id = getID();

  return DevID_Mapper(id);
#else
  return (SOFTRF_ADDRESS & 0xFFFFFFFFU );
#endif
}

static void* PSoC4_getResetInfoPtr()
{
  return (void *) &reset_info;
}

static String PSoC4_getResetInfo()
{
  switch (reset_info.reason)
  {
    default                     : return F("No reset information available");
  }
}

static String PSoC4_getResetReason()
{
  switch (reset_info.reason)
  {
    case REASON_DEFAULT_RST       : return F("DEFAULT");
    case REASON_WDT_RST           : return F("WDT");
    case REASON_EXCEPTION_RST     : return F("EXCEPTION");
    case REASON_SOFT_WDT_RST      : return F("SOFT_WDT");
    case REASON_SOFT_RESTART      : return F("SOFT_RESTART");
    case REASON_DEEP_SLEEP_AWAKE  : return F("DEEP_SLEEP_AWAKE");
    case REASON_EXT_SYS_RST       : return F("EXT_SYS");
    default                       : return F("NO_MEAN");
  }
}

static uint32_t PSoC4_getFreeHeap()
{
//  uint8 *heapend = (uint8 *) _sbrk_r(0);
//  return CYDEV_HEAP_SIZE - (heapend - (uint8 *) &_end);

  char top;
  return &top - reinterpret_cast<char*>(_sbrk(0));
}

static void PSoC4_swSer_begin(unsigned long baud)
{
#if defined(CubeCell_GPS)
  Serial_GNSS_In.begin(baud);
#else
  Serial_GNSS_Out.begin(baud);

#if !defined(EXCLUDE_GNSS_MTK) && (STD_OUT_BR == 38400)
  Serial_GNSS_Out.write("$PMTK251,38400*27\r\n");
  GNSS_FLUSH(); delay(250);
#endif /* EXCLUDE_GNSS_MTK */

#if !defined(EXCLUDE_GNSS_UBLOX)
  unsigned int baudrate = STD_OUT_BR;

  setBR[ 8] = (baudrate      ) & 0xFF;
  setBR[ 9] = (baudrate >>  8) & 0xFF;
  setBR[10] = (baudrate >> 16) & 0xFF;

  uint8_t msglen = makeUBXCFG(0x06, 0x00, sizeof(setBR), setBR);
  Serial_GNSS_Out.write(GNSSbuf, msglen);
  GNSS_FLUSH(); delay(250);
#endif /* EXCLUDE_GNSS_UBLOX */

// https://github.com/HelTecAutomation/CubeCell-Arduino/commit/0c7dfbf325602a0ac502b89a4e7e44e9b705e5ac
#if 0
  Serial_GNSS_Out.end();
#endif

  Serial_GNSS_Out.begin(STD_OUT_BR);
#endif /* CubeCell_GPS */
}

static float PSoC4_Battery_param(uint8_t param)
{
  float rval, voltage;

  switch (param)
  {
  case BATTERY_PARAM_THRESHOLD:
    rval = hw_info.model == SOFTRF_MODEL_MINI ? BATTERY_THRESHOLD_LIPO   :
                                                BATTERY_THRESHOLD_NIMHX2;
    break;

  case BATTERY_PARAM_CUTOFF:
    rval = hw_info.model == SOFTRF_MODEL_MINI ? BATTERY_CUTOFF_LIPO   :
                                                BATTERY_CUTOFF_NIMHX2;
    break;

  case BATTERY_PARAM_CHARGE:
    voltage = Battery_voltage();
    if (voltage < Battery_cutoff())
      return 0;

    if (voltage > 4.2)
      return 100;

    if (voltage < 3.6) {
      voltage -= 3.3;
      return (voltage * 100) / 3;
    }

    voltage -= 3.6;
    rval = 10 + (voltage * 150 );
    break;

  case BATTERY_PARAM_VOLTAGE:
  default:

  #if defined(BAT_MON_DISABLE)
    if (PSoC4_bat_mon_disable) {
      rval = 0;
    } else
  #endif
    {
      uint16_t mV = 0;

      if (hw_info.model == SOFTRF_MODEL_MINI &&
          PSoC4_state   == PSOC4_ACTIVE) {
        /* GPIO7 is shared between USER_KEY and VBAT_ADC_CTL functions */
        int user_key_state = digitalRead(SOC_GPIO_PIN_BUTTON);

        /* if the key is not pressed down - activate VBAT_ADC_CTL */
        if (user_key_state == HIGH) {
          pinMode(VBAT_ADC_CTL,OUTPUT);
          digitalWrite(VBAT_ADC_CTL,LOW);
        }

#if !defined(ARDUINO_ARCH_ASR650X)
        /* Heltec CubeCell Arduino Core 1.2.0 or less */
        mV = analogRead(SOC_GPIO_PIN_BATTERY);
#else
        mV = analogReadmV(SOC_GPIO_PIN_BATTERY);
#endif

        /* restore previous state of VBAT_ADC_CTL pin */
        if (user_key_state == HIGH) {
          /*
           * CubeCell-GPS has external 10K VDD pullup resistor
           * connected to GPIO7 (USER_KEY / VBAT_ADC_CTL) pin
           */
          pinMode(VBAT_ADC_CTL, INPUT);
        }
      }

      rval = mV * SOC_ADC_VOLTAGE_DIV / 1000.0;
    }
    break;
  }

  return rval;
}
